<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddInventoryActivity">

    <!-- Book Name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/book_name" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingStart="4dp"
            tools:ignore="RtlSymmetry">

            <!-- Name field -->
            <EditText
                android:id="@+id/e_book_name"
                style="@style/EditTextStyle"
                android:hint="@string/name"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <!-- Book Code -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/book_code" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingStart="4dp">

            <!-- Breed field -->
            <EditText
                android:id="@+id/e_book_code"
                style="@style/EditTextStyle"
                android:hint="@string/code"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <!-- Book Quantity -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/quantity" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingStart="4dp"
            tools:ignore="RtlSymmetry">

            <ImageButton
                android:id="@+id/e_book_decrease_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_decrease"
                tools:ignore="NestedWeights,Suspicious0dp" />

            <EditText
                android:id="@+id/e_book_quantity"
                android:layout_width="0dp"
                android:hint="@string/quantity"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                tools:ignore="Suspicious0dp" />
            <!--style="@style/EditTextStyle"-->

            <ImageButton
                android:id="@+id/e_book_increase_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_increase"
                tools:ignore="Suspicious0dp" />

        </LinearLayout>
    </LinearLayout>

    <!-- Book Price -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/book_price" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/e_book_price"
                style="@style/EditTextStyle"
                android:hint="@string/price"
                android:inputType="number" />

            <!-- Units for weight (L.E) -->
            <TextView
                android:id="@+id/label_weight_units"
                style="@style/PoundStyle"
                android:text="@string/l_e" />
        </RelativeLayout>
    </LinearLayout>

    <!-- Book Suppliers -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/supplier_name" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Suppliers drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_suppliers"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingEnd="16dp"
                android:spinnerMode="dropdown"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

    <!-- Suppliers Contacts -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/supplier_contact" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingStart="4dp">

            <!-- Breed field -->
            <EditText
                android:id="@+id/e_supplier_contact"
                style="@style/EditTextStyle"
                android:hint="@string/_02_000000"
                android:inputType="textPhonetic|phone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>